--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>Devops Session 1.0</title>
     </head>
     <body>
-        
+
     </body>
 </html>
 
