--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Devops Session 1.0</title>
+        <title>Git Session 3.0</title>
     </head>
     <body>
 
