--- a/Contact.html
+++ b/Contact.html
@@ -4,7 +4,9 @@
         <title>Contact Us</title>
     </head>
     <body>
-
+        <h3>SAI LAKSHMAN </h3>
+        <h3>HYDERABAd</h3>
+        <h3>500032</h3>
     </body>
 </html>
 
