--- a/Contact.html
+++ b/Contact.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h3>SAI LAKSHMAN </h3>
-        <h3>HYDERABAd</h3>
+        <h3>HYDERABAD</h3>
         <h3>500032</h3>
     </body>
 </html>
